<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name_main">名字没起好</string>
    <string name="action_settings">设置</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="prompt">提示</string>
    <string name="shuzi_zimu">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="shuzi">0123456789</string>
    <string name="shuzi_dian">0123456789.</string>
    <string name="biaoge_title">营收表格</string>
    <string name="chat">聊天</string>
    <string name="bottom_index">首页</string>
    <string name="get_history">借款记录</string>
    <string name="return_history">还款记录</string>
    <string name="bottom_person">我的</string>
    <string name="phone_number">手机号码</string>
    <string name="pass_word">密码</string>
    <string name="wait_deal">待处理</string>
    <string name="has_finish">已完成</string>
    <string name="all">全部</string>
    <string name="all_money">总资产</string>
    <string name="my_money_card">银行账户</string>
    <string name="order_detail">交易明细</string>
    <string name="my_larger_num">我的额度</string>
    <string name="same_people">我的合伙人</string>
    <string name="my_money_borrow">我的借款</string>
    <string name="should_money">应收账款</string>
    <string name="zhaopai">招牌</string>
    <string name="zhushi">主食</string>
    <string name="xiaochi">小吃</string>
    <string name="yinpin">饮品</string>
    <string name="more_set">更多</string>
    <string name="update">检查更新</string>
    <string name="login_out">退出登录</string>
    <string name="head_img">头像</string>
    <string name="business_name">店铺名</string>
    <string name="business_info">店铺介绍</string>
    <string name="business_address">店铺地址</string>
    <string name="safe_set">安全设置</string>
    <string name="business_num">商户号</string>
    <string name="login_pass">修改密码</string>
    <string name="hint_business_name">知青局</string>
    <string name="defaule_bus_num">A001</string>
    <string name="hint_business_add">中工北苑食堂3L店</string>
    <string name="hint_business_info">请填写店铺介绍</string>
    <string name="page_view_emtpy">暂无数据,点击刷新</string>
    <string name="page_view_network_error_hint">网络出错啦\n点击屏幕重试</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="add_tag_unknown_exception">设置标签失败，未知异常</string>
    <string name="add_tag_success">接口调用成功</string>
    <string name="add_tag_error_count">接口调用失败, tag数量过大, 最大不能超过200个</string>
    <string name="add_tag_error_frequency">设置标签失败，频率过快</string>
    <string name="add_tag_error_null">接口调用失败, tag 为空</string>
    <string name="add_tag_error_repeat">设置标签失败, 标签重复</string>
    <string name="add_tag_error_unbind">设置标签失败, 服务未初始化成功</string>
    <string name="add_tag_error_not_online">还未登陆成功</string>
    <string name="add_tag_error_black_list">该应用已经在黑名单中,请联系售后支持!</string>
    <string name="add_tag_error_exceed">已存 tag 超过限制</string>
    <string name="push_notification_title">通知栏测试</string>
    <string name="push_notification_msg_title">通知栏测试</string>
    <string name="push_notification_msg_content">您收到一条测试消息，点击访问www.igetui.com！</string>
    <string name="push_transmission_data">收到一条透传测试消息</string>
    <string name="loading_tip">--</string>
    <string name="login_account_tip">输入手机号</string>
    <string name="login_pass_tip">输入密码</string>
    <string name="forget_pass">还没有账号? 立即注册</string>
    <string name="code_regisger">扫描注册</string>
    <string name="has_login_phone">您已注册过登录账号</string>
    <string name="user_new_phone_login">使用新账号登录</string>
    <string name="user_old_phone_login">用原有账号登录</string>
    <string name="activation_phone">激活账号</string>
    <string name="exception_info">账号信息异常，请联系管理员!</string>
    <string name="shouxin_bohui">您的额度申请被否决，请重新申请额度!</string>
    <string name="no_borrow_config">暂无可提款信息，请联系管理员</string>
    <string name="get_my_num">申请额度</string>
    <string name="go_jiekuan">去借款</string>
    <string name="wait_do_work">待办事项</string>
    <string name="user_name_str">姓名</string>
    <string name="id_card">身份证号码</string>
    <string name="country_info">国籍</string>
    <string name="huji_info">户籍所在地</string>
    <string name="minzu_info">民族</string>
    <string name="other_info">其他</string>
    <string name="id_card_address">选择身份证地址</string>
    <string name="please_write">请输入</string>
    <string name="is_love">婚姻状态</string>
    <string name="please_choose">请选择</string>
    <string name="study_good">教育程度</string>
    <string name="house_info">住房信息</string>
    <string name="stay_address">居住地址</string>
    <string name="choose_address">选择地区</string>
    <string name="address_detail">详细地址</string>
    <string name="address_detail_tip">街道门牌信息</string>
    <string name="is_house">住房状况</string>
    <string name="is_house_tip">选择现在住房情况</string>
    <string name="mounth_money">每月租金</string>
    <string name="mounth_money_tip">请折合成月租金</string>
    <string name="call_info">联系信息</string>
    <string name="phone_num">固定电话</string>
    <string name="phone_num_tip">固定电话/手机号码</string>
    <string name="phone_address">通讯地址</string>
    <string name="but_next">下一步</string>
    <string name="work_info">工作单位信息</string>
    <string name="work_company">单位全称</string>
    <string name="work_kind">所属行业</string>
    <string name="work_phone">单位电话</string>
    <string name="work_address">单位地址</string>
    <string name="work_address_detail">详细地址</string>
    <string name="work_name">职业/职位</string>
    <string name="work_user">工作性质</string>
    <string name="work_yue_money">个人收入(元/月)</string>
    <string name="work_time">任职开始时间</string>
    <string name="work_start_time">从业开始时间</string>
    <string name="work_time_tip">在本单位任职的开始时间</string>
    <string name="work_start_time_tip">从事本行业的开始时间</string>
    <string name="but_submit">提交</string>
    <string name="but_sure">确定</string>
    <string name="but_apply">申请</string>
    <string name="but_open_wy">开通网银</string>
    <string name="but_reset">重置</string>
    <string name="but_cancle">取消</string>
    <string name="but_back">返回</string>
    <string name="but_agree">已看过并同意</string>
    <string name="set_title">设置</string>
    <string name="login_phone_num">登录手机号</string>
    <string name="reset_login_pass">重置登录密码</string>
    <string name="set_login_pass">设置登录密码</string>
    <string name="modify_login_pass">修改登录密码</string>
    <string name="modif_order_pass">修改交易密码</string>
    <string name="finger_login">指纹登录</string>
    <string name="shoushi_login">手势登录</string>
    <string name="finger_show_msg">“得融在线”的触控ID</string>
    <string name="finger_recogni_tip">通过Home键验证已有手机指纹</string>
    <string name="finger_tips">开户后可以使用Touch ID验证指纹快速完成登录,设置权对本机有效</string>
    <string name="set_handpause">设置手势密码</string>
    <string name="setting_success">设置成功</string>
    <string name="draw_shoushi_tips">请重新绘制图案，至少连接5个点</string>
    <string name="safe_num">安全证书</string>
    <string name="dianzi_zhang">电子印章</string>
    <string name="recevie_msg">接受消息通知</string>
    <string name="clear_cache">清理缓存</string>
    <string name="about_my">关于得融在线</string>
    <string name="has_open">已开启</string>
    <string name="no_open">未开启</string>
    <string name="has_setup">已安装</string>
    <string name="no_setip">未安装</string>
    <string name="bind_phone_num">您的绑定手机号</string>
    <string name="change_phone_num">更换手机号</string>
    <string name="change_phone_success">更换成功</string>
    <string name="new_phone_login">请用新手机号登录</string>
    <string name="phone_change_tip">一个手机号只能作为一个账号的登录名</string>
    <string name="code_phone_tip">短信验证码已发送至您的手机</string>
    <string name="new_phone_tip">请输入新的手机号</string>
    <string name="msg_code">验证码</string>
    <string name="msg_code_hint">请输入短信验证码</string>
    <string name="msg_code_title">短信验证</string>
    <string name="get_msg_again">重新获取</string>
    <string name="phone_pre">+86</string>
    <string name="update_shoushi">修改手势密码</string>
    <string name="show_shoushi">显示手势轨迹</string>
    <string name="login_phone_tip">请输入登录手机号</string>
    <string name="msg_code_check">短信验证</string>
    <string name="set_new_pass">设置新密码</string>
    <string name="sure_new_pass">确认新密码</string>
    <string name="old_pass">原密码</string>
    <string name="new_pass">新密码</string>
    <string name="old_pass_hint">请输入原密码</string>
    <string name="new_pass_hint">请输入新密码</string>
    <string name="set_new_pass_tip">请输入6-16位数字+字母组合</string>
    <string name="sure_new_pass_tip">请再次输入新密码</string>
    <string name="must_has_shuzi">必须包含数字</string>
    <string name="must_has_zimu">必须包含字母</string>
    <string name="clear_all_message">清空全部消息</string>
    <string name="service_remind_message">服务提醒为你提供借款、充值、还款、合同签署等重要提醒通知</string>
    <string name="service_remind">服务提醒</string>
    <string name="card_kind">证件类型</string>
    <string name="card_num">证件号码</string>
    <string name="more_info">查看更多资料</string>
    <string name="logout">退出登录</string>
    <string name="base_info">基础资料</string>
    <string name="work_msg">职业资料</string>
    <string name="base_msg">基本信息</string>
    <string name="work_card_info">任职工作信息</string>
    <string name="perfect_info">完善资料</string>
    <string name="perfect_info_tip">请先完善您的资料再进行额度申请</string>
    <string name="bianji_info">编辑资料</string>
    <string name="xieyi_tips">请先阅读协议</string>
    <string name="tiaoguo">暂不开通网银</string>
    <string name="start_check_id">开始认证</string>
    <string name="id_card_check">身份认证</string>
    <string name="id_card_check2">身份验证</string>
    <string name="id_card_check_tip">请完成身份认证,保证合法权益!</string>
    <string name="id_card_saomiao">请扫描您的身份证</string>
    <string name="face_check_tip">请保持光线充足,面部正对手机,且无阻挡!</string>
    <string name="face_check_but">开始检测</string>
    <string name="face_title">人脸识别</string>
    <string name="front_card">点击扫描人像面</string>
    <string name="back_card">点击扫描国徽面</string>
    <string name="meglive_auth_progress">正在联网授权中...</string>
    <string name="meglive_auth_again">重新联网授权</string>
    <string name="meglive_auth_failed">联网授权失败！请检查网络或找服务商</string>
    <string name="meglive_returnbtn">返回首页</string>
    <string name="meglive_liveness_again">重新验证活体</string>
    <string name="my_check_tip">法定代表人信息</string>
    <string name="id_card_2">身份证号</string>
    <string name="please_upload_pic">请上传您身份证照片</string>
    <string name="id_card_front">① 先拍人像面</string>
    <string name="id_card_back">② 再拍国徽面</string>
    <string name="id_card_hand">③ 上传手持身份证照片</string>
    <string name="id_card_edit_hint">请输入身份证号</string>
    <string name="qinafa_jiguan">签发机关</string>
    <string name="out_date">证件到期日</string>
    <string name="install_cer">安装安全证书</string>
    <string name="check_success">身份认证成功</string>
    <string name="anzuang_card_text">请先安装安全证书</string>
    <string name="check_fail">身份认证失败</string>
    <string name="wenxin_tip">温馨提示:</string>
    <string name="no_install">暂不安装</string>
    <string name="again_check">重新认证</string>
    <string name="install_cer_tip">温馨提示:在线业务办理过程中需验证安全证书,请先安装安全证书。您可以通过我的-设置-安全证书查看证书状态</string>
    <string name="submit_success">提交成功</string>
    <string name="wait_tip">您的身份信息已提交成功,请等待审核</string>
    <string name="applay_wait_tip">您的额度申请正在审核中,请等待审核</string>
    <string name="service_phone">客服电话:400-6666-6666</string>
    <string name="modify_order_pass_title">修改交易密码</string>
    <string name="ser_order_pass_title">设置交易密码</string>
    <string name="please_use_phone_regist2">请输入手机号</string>
    <string name="please_input_test_code">请输入8-20位数字英文或字符密码</string>
    <string name="pingtai_xieyi">我已仔细阅读并同意《注册协议》《合格投资人申明》《风险揭示书》</string>
    <string name="please_input_message_code">请输入验证码</string>
    <string name="please_password_again">请再次输入密码</string>
</resources>