<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_height="match_parent">

    <include
        android:id="@+id/top_layout"
        layout="@layout/title_leftbut_bar"/>
    <LinearLayout
        android:id="@+id/zhuti_lay"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_22"
            android:textColor="@color/black33"
            android:paddingLeft="@dimen/dp_10"
            android:gravity="left|center_vertical"
            android:text="注册" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/loading_tip"
            android:visibility="gone"
            android:id="@+id/tv_zhuti"
            android:gravity="right"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:paddingRight="@dimen/dp_10"
            android:textSize="@dimen/sp_15"
            android:layout_height="wrap_content"/>

        <ImageView
            android:visibility="gone"
            android:id="@+id/arrow_view"
            android:layout_width="wrap_content"
            android:layout_marginRight="@dimen/dp_15"
            android:src="@drawable/android_list_idex"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etPhone"
            android:theme="@style/MyEditText"
            android:layout_width="wrap_content"
            android:hint="@string/please_use_phone_regist2"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_10"
            android:inputType="number"
            android:maxLength="11"
            android:textSize="@dimen/sp_15"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etCode"
            android:theme="@style/MyEditText"
            android:layout_width="wrap_content"
            android:hint="@string/please_input_message_code"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:paddingBottom="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:inputType="number"
            android:maxLength="8"
            android:textSize="@dimen/sp_15"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/getCodeTv"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:text="获取验证码"
            android:textColor="@color/font_c"
            android:textSize="@dimen/sp_14"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etPassWord"
            android:theme="@style/MyEditText"
            android:layout_width="wrap_content"
            android:digits="@string/shuzi_zimu"
            android:hint="@string/please_input_test_code"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:paddingBottom="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:maxLength="20"
            android:inputType="textPassword"
            android:textSize="@dimen/sp_15"
            android:layout_height="wrap_content"/>
        <ToggleButton
            android:id="@+id/togglePwd"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/switch_in"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etPassWordAgain"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:digits="@string/shuzi_zimu"
            android:hint="@string/please_password_again"
            android:theme="@style/MyEditText"
            android:maxLength="20"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:paddingBottom="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:textSize="@dimen/sp_15"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:background="@color/white"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:orientation="horizontal"
        >

        <EditText
            android:layout_width="wrap_content"
            android:hint="@string/please_input_test_code"
            android:background="@null"
            android:id="@+id/et_code"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_10"
            android:inputType="number"
            android:textSize="@dimen/sp_15"
            android:maxLength="4"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="@dimen/dp_70"
            android:id="@+id/iv_code"
            android:layout_marginRight="@dimen/dp_15"
            android:src="@drawable/back_card"
            android:layout_height="@dimen/dp_35"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_hight"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:background="@color/divide_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/xieyiCb"
            android:layout_width="@dimen/dp_18"
            android:checked="false"
            android:layout_height="@dimen/dp_18"
            android:layout_alignParentBottom="true"
            android:button="@null"
            android:background="@drawable/cart_select_selector"
            android:layout_marginTop="@dimen/dp_2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tipTv"
            android:paddingLeft="@dimen/dp_5"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/black99"
            android:lineSpacingExtra="@dimen/dp_6"
            android:text="@string/pingtai_xieyi"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/but_height"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:text="立即注册"
        android:enabled="false"
        android:id="@+id/bt_next"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/black99"
        android:background="@drawable/btn_ok"
        />
</LinearLayout>